# hw10_django

./: Dockerfile  README.md  db.sqlite3  pyproject.toml
my_first_site/: settings.py  urls.py
quotes/: forms.py  models.py  urls.py  utils.py  views.py
quotes/migrations/: 0001_initial.py
quotes/templates/quotes/: add_author.html  add_quote.html  author_detail.html  base.html  index.html
quotes/templatetags/: extract.py
users/: forms.py  models.py  urls.py  views.py
users/static/users/: style.css
users/templates/users/: base.html  login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  profile.html  register.html  signup.html
utils/: add_quotes_to_mongo.py
