[tool.poetry]
name = "homework10"
version = "0.1.0"
description = ""
authors = ["AndrewUAV <145654146+AndrewUAV@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
environ = "^1.0"
pymongo = "^4.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
